disconnections fix